Pull request #772: AG-51880 Fix text padding for filters and custom filters
Merge in SCITER/adguard-mini from AG-51880 to master

Squashed commit of the following:

commit 22b0cae99c20dbeb725b4c8957447b994e1d456e
Author: Pavel Kizin <p.kizin@adguard.com>
Date:   Fri Mar 20 13:52:07 2026 +0300

    AG-51880 Fix review

commit f34474eddb50057ebdddd29a7e51d467033aaae5
Merge: a8314c47 0ca4f7e4
Author: Pavel Kizin <p.kizin@adguard.com>
Date:   Fri Mar 20 13:41:46 2026 +0300

    Merge remote-tracking branch 'remotes/origin/master' into AG-51880

commit a8314c476803efcbba370242f3f69194d952d900
Author: Pavel Kizin <p.kizin@adguard.com>
Date:   Fri Mar 20 13:00:19 2026 +0300

    AG-51880 Update AGENTS.md

commit b98d35c2e183a45ef39c1a436a4456dd051da7fc
Merge: b92b56c6 d54f8e21
Author: Pavel Kizin <p.kizin@adguard.com>
Date:   Fri Mar 20 12:48:00 2026 +0300

    Merge remote-tracking branch 'remotes/origin/master' into AG-51880

commit b92b56c6fc8af8879490e36da27ee578b2a2ba6f
Author: Pavel Kizin <p.kizin@adguard.com>
Date:   Tue Mar 17 16:32:58 2026 +0300

    AG-51880 Fix text padding for filters and custom filters

--- a/AdguardMini/sciter-ui/modules/settings/components/Filters/components/Filter/Filter.module.pcss
+++ b/AdguardMini/sciter-ui/modules/settings/components/Filters/components/Filter/Filter.module.pcss
@@ -12,4 +12,12 @@
         cursor: pointer;
         text-decoration: underline;
     }
+
+    &_homepage {
+        padding-top: 4px;
+    }
+
+    &_warning {
+        padding-top: 4px;
+    }
 }
